OPHYK-78 use HashSet for potentially faster filtering